--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,29 @@ body {
     text-wrap: balance;
   }
 }
+
+/*Scroll*/
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background-color: transparent;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: rgb(82 82 91 / 0.9);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(82 82 91);
+  border-radius: 10px;
+}
